moved css to its own file

--- a/rg.html
+++ b/rg.html
@@ -3,148 +3,7 @@
 <head>
   <title>test</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <style>
-    #touch-rg{
-      width:300px;
-      height:470px;
-
-      border:1px solid black;
-      border-radius: 15px 0px 0px 0px;
-      overflow: hidden;
-
-      display:flex;
-      flex-direction: column;
-
-      font-family: Arial, Helvetica, sans-serif;
-    }
-
-    #touch-rg header{
-      background-color:#424242;
-      border-bottom: 5px solid #8BC34A;
-      color:white;
-      height:40px;
-      padding-left: 10px;
-      padding-right: 10px;
-      display:flex;
-      flex-direction: row;
-    }
-
-    #touch-rg header .brand{
-      flex:1;
-      width:90%
-    }
-
-    #touch-rg header .close{
-      background-color:#424242;
-      border:0px;
-    }
-
-    #touch-rg main{
-      flex:1;
-      margin: 20px 0px 20px 0px;
-    }
-
-    #touch-rg main .breadcrumb{
-      padding:0px 10px 20px 20px;
-      font-size: 14px;
-    }
-
-    #touch-rg main .breadcrumb a{
-      color:#8BC34A;
-      text-decoration: none;
-    }
-
-    #touch-rg main .breadcrumb a.current{
-      color:#9E9E9E;
-    }
-
-    #touch-rg main .prompt{
-      padding:0px 40px 10px 20px;
-      font-weight: bold;
-    }
-
-    #touch-rg main .menu{
-      padding: 0;
-      list-style-type:none;
-    }
-
-    #touch-rg main .menu li{
-      padding:0px 0px 20px 20px;
-      height:25px;
-      display: flex;
-      flex-flow:row;
-    }
-
-    #touch-rg main .menu li i{
-      width:10px;
-    }
-
-    #touch-rg main .menu li .icon-section{
-      width:40px;
-    }
-
-    #touch-rg main .menu li .menu-option{
-      padding-top: 12px;
-      color:#424242;
-    }
-
-    #touch-rg main .menu li.active{
-      background-color:#8BC34A;
-      border:1px solid #33691E;
-    }
-
-    #touch-rg main .menu li.active .menu-option{
-      color:#E6EE9C;
-    }
-
-    #touch-rg main .menu li:hover{
-      background-color:#DCEDC8;
-      /*border:1px solid #33691E; no border in the spec. But it makes it look better*/
-    }
-
-    #touch-rg main .menu li:hover .menu-option{
-      color:#33691E;
-    }
-
-
-    #touch-rg main .back{
-      padding:0px 0px 20px 20px;
-      height:25px;
-      display: flex;
-      flex-flow:row;
-    }
-
-    #touch-rg main .back .icon-section{
-      min-height: 10px;
-      width: 40px;
-    }
-
-    #touch-rg main .back .title{
-      padding-top: 12px;
-    }
-
-    #touch-rg main .back .icon-section .icon{
-      color:#8BC34A;
-    }
-
-    #touch-rg main .back:hover{
-      background-color:#DCEDC8;
-      color:#33691E;
-      border:1px solid #33691E;
-    }
-
-    #touch-rg footer{
-      background-color:#E0E0E0;
-      height:20px;
-      padding:0px 1px 0px 3px;
-    }
-
-    #touch-rg .icon {
-      color:#424242;
-      font-size: 36px;
-    }
-
-  </style>
+  <link rel="stylesheet" href="touch-rg.css">
 </head>
 <body>
 
