updated to pass an accessibility audit

--- a/javascript-part/touch-app.html
+++ b/javascript-part/touch-app.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
   <title>test</title>
+  <link rel="stylesheet" href="touch-app.css">
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.js"></script>
-
-  <link rel="stylesheet" href="touch-app.css">
 </head>
 <body>
 
@@ -14,10 +14,10 @@
         <!-- The header for the module -->
         <header>
           <div class="brand">
-            <img height="60px" src="images/logo-best-brands.png" />
+            <img alt="The Brand Image" height="60px" src="images/logo-best-brands.png" />
           </div>
           <button class="close">
-            <img height="15px" src="images/btn-close.png"/>
+            <img alt="Close Icon" height="15px" src="images/btn-close.png"/>
           </button>
         </header>
 
@@ -104,7 +104,7 @@
 
               <div class="phone">
                 <label for="phone">Mobile Phone Number:*</label>
-                <input type="text" id="phone" name="phone" placeholder="ex : 123-123-1234" required />
+                <input type="text" id="phone" name="phone" placeholder="ex: 123-123-1234" required />
               </div>
 
               <div class="state">
@@ -147,7 +147,7 @@
 
         <!-- inormation footer -->
         <footer>
-          <img height="15px" width="100px" src="images/logo-tc.png"/>
+          <img alt="Powered By Touch Commerences" height="15px" width="100px" src="images/logo-tc.png"/>
         </footer>
     </div>
 
